<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:showDividers="middle"
    android:divider="@drawable/empty_tall_divider"
    tools:context="com.sachinsbethur.technicalsyllabusquestionpapers.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <Button
        android:text="@string/btn_diploma"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#1923A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="25dp"
        android:id="@+id/btnDiploma"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btnDcet"
        android:text="@string/btn_dcet"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape_dcet"
        android:shadowColor="#1923A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btnEngineering"
        android:text="@string/btn_engineering"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape_engineering"
        android:shadowColor="#1923A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:onClick="onClick"
        />

    <com.sachinsbethur.technicalsyllabusquestionpapers.ScrollTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvAds"
        />

</LinearLayout>
